z-index-fixed

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,6 @@ screen and (max-width:728px) {
         left:0;
         height:100vh!important;
         width:100vw!important;    
-        z-index:1!important;        
+        z-index:-1!important;        
     }
 }
